# Universal-E-commerce-Price-Intelligence

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  price_intel.db  pyproject.toml  render.yaml  requirements.txt  seed_demo.py
.github/workflows/: ci.yml
data/fixtures/amazon/: B08N5WRWNW.html  default.html
src/price_intel/: __init__.py  analysis.py  cli.py  config.py  db.py  models.py  normalizer.py  pipeline.py
src/price_intel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/price_intel/api/: main.py  routes.py  schemas.py
src/price_intel/api/static/: index.html
src/price_intel/scrapers/: __init__.py  amazon.py  base.py  registry.py
tests/: conftest.py  test_analysis.py  test_api.py  test_pipeline.py  test_scraper.py
